<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_article"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tagsSpinner"
        android:layout_weight="1.5"
        android:entries="@array/spinner_tags"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headingEditText"
        android:hint="@string/heading"
        android:layout_weight="0.8"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionEditText"
        android:layout_weight="15"
        android:hint="@string/write"
        android:gravity="top"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/publishButton"
        android:text="@string/publish"
        android:layout_gravity="right"
        android:layout_weight="1"/>


</LinearLayout>